@@ -29,6 +29,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #14055: Add __sizeof__ support to _elementtree.
+
 - Issue #15054: A bug in tokenize.tokenize that caused string literals
   with 'b' prefixes to be incorrectly tokenized has been fixed.
   Patch by Serhiy Storchaka.
